--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,5 @@
 <resources>
-    <string name="app_name">MobileProject</string>
+    <string name="app_name">Mobile Project</string>
+    <string name="result_text">Result</string>
+    <string name="invalid_input">Invalid input</string>
 </resources>
